--- a/VIDEO.html
+++ b/VIDEO.html
@@ -33,17 +33,17 @@
 </head>
 <body>
 	<ul class="navbar">
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/index.html">Početna</a></li>
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/O_meni.html.html#">O_meni.html</a></li>
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/vje%C5%BEbe.html">Vježbe.html</a></li>
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/VIDEO.html">Video.html</a></li>
+    <li class="navitem"><a href="index.html">Početna</a></li>
+    <li class="navitem"><a href="O_meni.html.html">O_meni.html</a></li>
+    <li class="navitem"><a href="vježbe.html">Vježbe.html</a></li>
+    <li class="navitem"><a href="VIDEO.html">Video.html</a></li>
   </ul>
 	<h1>REKLAMA ZA PROIZVOD</h1>
 	<h2>Oprema : Nikon d3500, gimbal, </h2>
 	<p>Video za reklamni proizvod obrađivala sam u programu DaVinci Resolve. Video sadrži nepomični tekst koji se nalazi u doljenjem desnom kutu tjekom cijelog videa. Na samom početku videa ubacila sam teskt koji se pomiče sa nalsvom “Projektni zadatak”. Na prijelazima se nalaze Fusion Transitions: Film Stip i Drop Warp te se na prielazima nalaze i Fade in Fade out. Zoom in i zoom out su snimljeni pomoću gimbala i zooma na objektivu. Zvuk se također postupno pojačava sa početkom videa te postuono stišava pri kraju.</p>
 
 	<video controls  width="900" height="480">
-		<source src="v.mp4" type="video/mp4">
+		<source src="video/v.mp4" type="video/mp4">
 
 	</video>
 
