--- a/vježbe.html
+++ b/vježbe.html
@@ -38,19 +38,19 @@
 
 <body>
 	<ul class="navbar">
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/index.html">Početna</a></li>
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/O_meni.html.html">O_meni.html</a></li>
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/vje%C5%BEbe.html">Vježbe.html</a></li>
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/VIDEO.html">Video.html</a></li>
+    <li class="navitem"><a href="index.html">Početna</a></li>
+    <li class="navitem"><a href="O_meni.html.html">O_meni.html</a></li>
+    <li class="navitem"><a href="vježbe.html">Vježbe.html</a></li>
+    <li class="navitem"><a href="VIDEO.html">Video.html</a></li>
   </ul>
 	<h1>Vježbe</h1>
   
 	<h1>Vježbe-vektorska grafika</h1>
 	<h3>Vježba 1-font</h3>
-	<img src="lol.jpg" hegiht="200" width="500">
+	<img src="slike/lol.jpg" hegiht="200" width="500">
 	<h3>Vježba 2-krivulje</h3>
 	<p>Zadatak:- Crtanje Bezierovih krivulja u vektorskim programima u zadanom koordinatnom sustavu - Definiranje sivog tona za ispunu i obrub objekata; debljina linije- Slojevi (Objects)- Automatsko crtanje objekata između zadanih objekta- Pretvaranje teksta u objekte i izrezivanje maski</p>
-	<img src="slova.jpg" width="500" height="200" >
+	<img src="slike/slova.jpg" width="500" height="200" >
 	<h3>Vježba 3</h3>
 	<p>Zadatak:
  		- uvođenje slika u dokument 
@@ -63,8 +63,8 @@
 		grupiranje objekata 
  		- apliciranje swatch boja na
 		 objekte</p>
-		 <img src="putovnica.jpg" width="500" height="200">
-		<img src="cvijet.jpg" width="500" height="200">
+		 <img src="slike/putovnica.jpg" width="500" height="200">
+		<img src="slike/cvijet.jpg" width="500" height="200">
 
 		<h3>Vježba 4 - gradijent, transparencija</h3>
 		<p>Zadatak:
@@ -75,13 +75,13 @@
  		- linearni i radijalni
 		 gradijent 
  		- "mesh" gradijent</p>
-		<img src="čaša.jpg" width="500" height="200">
-		<img src="nebo.jpg" width="500" height="200">
+		<img src="slike/čaša.jpg" width="500" height="200">
+		<img src="slike/nebo.jpg" width="500" height="200">
 
 		<h3>Prvi projektni zadatak</h3>
 			<p>Kreirati vlastiti font sa nekoliko slovnih znakova kojeg ćete upotrijebiti u drugom dijelu zadatka. 2. Kreirati jednostranični dokument 
 			U dokumentu pomoću alata za crtanje Bezierovih krivulja ilustrirati odabranu temu iz flore i/ili faune podmorja tako da se upotrijebe svi elementi zadani u tablici dolje (odabir motiva je slobodan i svi elementi se kombiniraju proizvoljno, a moguće je koristiti i sliku predložak)</p>
-		<img src="more.jpg" width="500" height="200">
+		<img src="slike/more.jpg" width="500" height="200">
 
 
 		<h1>Vježbe-piksel grafika</h1>
@@ -95,9 +95,9 @@
 		o kloniranjem (Clone Stamp, Heal) o kopiranjemselekcijeulayere
 		- lokalne i globalne korekcije boja (Burn/Dodge brush, Levels, Brightness/Contrast)</p>	
 
-		<img src="žena.jpg" width="500" height="200">
+		<img src="slike/žena.jpg" width="500" height="200">
 
-		<img src="drugažena.jpg" width="500" height="200">
+		<img src="slike/drugažena.jpg" width="500" height="200">
 
 		<h3>Vježba 6 - koloriranje</h3>
 		<p>Teme:
@@ -128,13 +128,13 @@
 
 	ZADATAK: dodati još pet elemenata po želji iz drugih izvora slika, tako da se uklope u atmosferu prve slike. Korigirati boje za usklađenje sa originalnom scenom ili stvoriti drugačije efekte (noć, oblačno, kiša...) </p>
 
-	<img src="žirafa.jpg" width="500" height="200">
-	<img src="polje.jpg" width="500" height="200">
+	<img src="slike/žirafa.jpg" width="500" height="200">
+	<img src="slike/polje.jpg" width="500" height="200">
 
 	<h3>Drugi projektni zadatak</h3>
 	<p>Digitalni multimedij 1 – KOLOKVIJ projektni zadatak – piksel grafika Kreirati sliku u Adobe Photoshopu ili GIMPu kao kompoziciju više fotografija koristeći tehnike
 	retuširanja, fotomontaže i koloriranja.</p>
-	<img src="01.jpg" width="500" height="200">
+	<img src="slike/01.jpg" width="500" height="200">
 
 	<h1>Vježbe - video/web</h1>
 	<h3>Vježba 9</h3>
@@ -144,7 +144,7 @@
 	ZADATAK: Izrežite clip1 i clip2 na drugačiji način nego što je opisano u uputama, dodajte im barem tri nova efekta te jedan statični i jedan pomični tekst (ubacite svoje ime i prezime). Možete dodati i drugačiji zvuk. Izvezite video u mp4 formatu.</p>
 	
 	<video controls>
-		<source src="video.mp4" type="video/mp4" >
+		<source src="video/video.mp4" type="video/mp4" >
 	</video>
 
 <style>
