--- a/O_meni.html.html
+++ b/O_meni.html.html
@@ -30,10 +30,10 @@
 </head>
 <body>
   <ul class="navbar">
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/index.html">Početna</a></li>
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/O_meni.html.html#">O_meni.html</a></li>
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/vje%C5%BEbe.html#">Vježbe.html</a></li>
-    <li class="navitem"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/VIDEO.html">Video.html</a></li>
+    <li class="navitem"><a href="index.html">Početna</a></li>
+    <li class="navitem"><a href="O_meni.html.html#">O_meni.html</a></li>
+    <li class="navitem"><a href="vježbe.html">Vježbe.html</a></li>
+    <li class="navitem"><a href="VIDEO.html">Video.html</a></li>
   </ul>
 
 
@@ -61,9 +61,9 @@
         
 
 
-        <img src="mercedes.JPG" width="1280" height="720" style="margin-right: 1000px;">
-       <img src="image_6483441 (4).JPG"width="1280" height="720" style="margin-right: 1000px;" >
-       <img src="image_6483441 (3).JPG" width="1280" height="720">
+        <img src="slike/mercedes.JPG" width="1280" height="720" style="margin-right: 1000px;">
+       <img src="slike/image_6483441 (4).JPG"width="1280" height="720" style="margin-right: 1000px;" >
+       <img src="slike/image_6483441 (3).JPG" width="1280" height="720">
 
 
 
