--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 </head>
 <body>
 	<ul class="navbar">
-    <li class="navitem" style="font-family: arial"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/index.html">Početna</a></li>
-    <li class="navitem" style="font-family: arial"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/O_meni.html.html#">O_meni.html</a></li>
-    <li class="navitem" style="font-family: arial"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/vje%C5%BEbe.html#">Vježbe.html</a></li>
-    <li class="navitem" style="font-family: arial"><a href="file:///C:/Users/Knezevic/Desktop/Glavni%20porjetk/VIDEO.html">Video.html</a></li>
+    <li class="navitem" style="font-family: arial"><a href="index.html">Početna</a></li>
+    <li class="navitem" style="font-family: arial"><a href="O_meni.html.html">O_meni.html</a></li>
+    <li class="navitem" style="font-family: arial"><a href="vježbe.html">Vježbe.html</a></li>
+    <li class="navitem" style="font-family: arial"><a href="VIDEO.html">Video.html</a></li>
   </ul>
 
   <h1 style="font-family: L">Lara Knežević</h1>
