--- a/O_meni.html.html
+++ b/O_meni.html.html
@@ -31,7 +31,7 @@
 <body>
   <ul class="navbar">
     <li class="navitem"><a href="index.html">Početna</a></li>
-    <li class="navitem"><a href="O_meni.html.html#">O_meni.html</a></li>
+    <li class="navitem"><a href="O_meni.html.html">O_meni.html</a></li>
     <li class="navitem"><a href="vježbe.html">Vježbe.html</a></li>
     <li class="navitem"><a href="VIDEO.html">Video.html</a></li>
   </ul>
