--- a/O_meni.html.html
+++ b/O_meni.html.html
@@ -61,9 +61,9 @@
         
 
 
-        <img src="slike/mercedes.JPG" width="1280" height="720" style="margin-right: 1000px;">
-       <img src="slike/image_6483441 (4).JPG"width="1280" height="720" style="margin-right: 1000px;" >
-       <img src="slike/image_6483441 (3).JPG" width="1280" height="720">
+        <img src="slike/mercedes.JPG" width="" height="800" style="margin-right: 1000px;">
+       <img src="slike/image_6483441 (4).JPG"width="" height="800" style="margin-right: 1000px;" >
+       <img src="slike/image_6483441 (3).JPG" width="" height="800">
 
 
 
