--- a/vježbe.html
+++ b/vježbe.html
@@ -47,10 +47,10 @@
   
 	<h1>Vježbe-vektorska grafika</h1>
 	<h3>Vježba 1-font</h3>
-	<img src="slike/lol.jpg" hegiht="200" width="500">
+	<img src="slike/lol.jpg" hegiht="" width="800">
 	<h3>Vježba 2-krivulje</h3>
 	<p>Zadatak:- Crtanje Bezierovih krivulja u vektorskim programima u zadanom koordinatnom sustavu - Definiranje sivog tona za ispunu i obrub objekata; debljina linije- Slojevi (Objects)- Automatsko crtanje objekata između zadanih objekta- Pretvaranje teksta u objekte i izrezivanje maski</p>
-	<img src="slike/slova.jpg" width="500" height="200" >
+	<img src="slike/slova.jpg" width="" height="800" >
 	<h3>Vježba 3</h3>
 	<p>Zadatak:
  		- uvođenje slika u dokument 
@@ -63,8 +63,8 @@
 		grupiranje objekata 
  		- apliciranje swatch boja na
 		 objekte</p>
-		 <img src="slike/putovnica.jpg" width="500" height="200">
-		<img src="slike/cvijet.jpg" width="500" height="200">
+		 <img src="slike/putovnica.jpg" width="" height="800">
+		<img src="slike/cvijet.jpg" width="" height="800">
 
 		<h3>Vježba 4 - gradijent, transparencija</h3>
 		<p>Zadatak:
@@ -75,13 +75,13 @@
  		- linearni i radijalni
 		 gradijent 
  		- "mesh" gradijent</p>
-		<img src="slike/čaša.jpg" width="500" height="200">
-		<img src="slike/nebo.jpg" width="500" height="200">
+		<img src="slike/čaša.jpg" width="" height="800">
+		<img src="slike/nebo.jpg" width="" height="800">
 
 		<h3>Prvi projektni zadatak</h3>
 			<p>Kreirati vlastiti font sa nekoliko slovnih znakova kojeg ćete upotrijebiti u drugom dijelu zadatka. 2. Kreirati jednostranični dokument 
 			U dokumentu pomoću alata za crtanje Bezierovih krivulja ilustrirati odabranu temu iz flore i/ili faune podmorja tako da se upotrijebe svi elementi zadani u tablici dolje (odabir motiva je slobodan i svi elementi se kombiniraju proizvoljno, a moguće je koristiti i sliku predložak)</p>
-		<img src="slike/more.jpg" width="500" height="200">
+		<img src="slike/more.jpg" width="" height="800">
 
 
 		<h1>Vježbe-piksel grafika</h1>
@@ -95,9 +95,9 @@
 		o kloniranjem (Clone Stamp, Heal) o kopiranjemselekcijeulayere
 		- lokalne i globalne korekcije boja (Burn/Dodge brush, Levels, Brightness/Contrast)</p>	
 
-		<img src="slike/žena.jpg" width="500" height="200">
+		<img src="slike/žena.jpg" width="" height="800">
 
-		<img src="slike/drugažena.jpg" width="500" height="200">
+		<img src="slike/drugažena.jpg" width="" height="800">
 
 		<h3>Vježba 6 - koloriranje</h3>
 		<p>Teme:
@@ -115,8 +115,8 @@
          		– Image – Mode – Graycale (slika gubi RGB kanale, treba ju ponovno prebaciti u RGB) 
      		- kolorirati ju sa najmanje tri boje (ili više po potrebi). 
      		- napraviti pet primjera iste slike sa različitim postavkama kolorizacije (ne mora nužno biti  realistično) </p>
-    <img src="dite.jpg" width="500" height="200">
-     <img src="ja.jpg" width="500" height="200">
+    <img src="dite.jpg" width="" height="800">
+     <img src="ja.jpg" width="" height="800">
 
     <h3>Vježba 7 - fotomontaža</h3>
     <p>* 		- tehnike selektiranja različitih tipova elemenata slike 
@@ -128,13 +128,13 @@
 
 	ZADATAK: dodati još pet elemenata po želji iz drugih izvora slika, tako da se uklope u atmosferu prve slike. Korigirati boje za usklađenje sa originalnom scenom ili stvoriti drugačije efekte (noć, oblačno, kiša...) </p>
 
-	<img src="slike/žirafa.jpg" width="500" height="200">
-	<img src="slike/polje.jpg" width="500" height="200">
+	<img src="slike/žirafa.jpg" width="" height="800">
+	<img src="slike/polje.jpg" width="" height="800">
 
 	<h3>Drugi projektni zadatak</h3>
 	<p>Digitalni multimedij 1 – KOLOKVIJ projektni zadatak – piksel grafika Kreirati sliku u Adobe Photoshopu ili GIMPu kao kompoziciju više fotografija koristeći tehnike
 	retuširanja, fotomontaže i koloriranja.</p>
-	<img src="slike/01.jpg" width="500" height="200">
+	<img src="slike/01.jpg" width="" height="800">
 
 	<h1>Vježbe - video/web</h1>
 	<h3>Vježba 9</h3>
