--- a/vježbe.html
+++ b/vježbe.html
@@ -115,8 +115,8 @@
          		– Image – Mode – Graycale (slika gubi RGB kanale, treba ju ponovno prebaciti u RGB) 
      		- kolorirati ju sa najmanje tri boje (ili više po potrebi). 
      		- napraviti pet primjera iste slike sa različitim postavkama kolorizacije (ne mora nužno biti  realistično) </p>
-    <img src="dite.jpg" width="" height="800">
-     <img src="ja.jpg" width="" height="800">
+    <img src="slike/dite.jpg" width="" height="800">
+     <img src="slike/ja.jpg" width="" height="800">
 
     <h3>Vježba 7 - fotomontaža</h3>
     <p>* 		- tehnike selektiranja različitih tipova elemenata slike 
